--- a/style_m.css
+++ b/style_m.css
@@ -1231,7 +1231,7 @@ div.box-caothap{
     position: absolute;
     top: 6px;
     left: 10px;
-    background: url(images/menu-m.PNG) no-repeat center;
+    background: url(images/menu-m.png) no-repeat center;
     z-index: 99;
     background-size: 100%;
  }
